Fix up resource card spacing again

--- a/hlx_statics/blocks/resource-card.css
+++ b/hlx_statics/blocks/resource-card.css
@@ -1,3 +1,8 @@
+main div.resource-card-container {
+  max-width: 1280px;
+  margin: auto;
+}
+
 main div.resource-card {
   width: var(--spectrum-global-dimension-static-grid-fluid-width);
   background: var(--spectrum-global-color-gray-100);
@@ -35,7 +40,6 @@ main div.resource-card > div {
     width: 100% !important;
   }
 }
-
 
 main div.resource-card > div:first-child {
   padding-left: 12px;
